# fileshare

./: .gitignore  CMakeLists.txt  main.cpp  run.sh
files/: directoryprobe.cpp  directoryprobe.hpp  fileinputstream.cpp  fileinputstream.hpp  fileoutputstream.cpp  fileoutputstream.hpp
streams/: memoryinputstream.cpp  memoryinputstream.hpp  memoryoutputstream.cpp  memoryoutputstream.hpp
tcp/: tcpclient.cpp  tcpclient.hpp  tcpconnection.cpp  tcpconnection.hpp  tcpmessage.cpp  tcpmessage.hpp  tcpserver.cpp  tcpserver.hpp  tcpsocket.cpp  tcpsocket.hpp  types.hpp
